Bug 463326 - WinCE missing ExpandEnvironmentStringsW function. r=dougt, blassey